--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
 <footer class="bg-dark text-white text-center py-4">
   <div class="container">
     <div class="mb-3">
-      <a href="https://facebook.com" target="_blank" class="text-white me-3">
+      <a href="https://www.facebook.com/francis.madera.675929/" target="_blank" class="text-white me-3">
         <i class="bi bi-facebook"></i> Facebook
       </a>
       <a href="https://twitter.com" target="_blank" class="text-white me-3">
@@ -117,7 +117,7 @@
       </a>
     </div>
     <div>
-      <a href="#" class="text-white me-3">Terms of Service</a>
+     
       <a href="#" class="text-white">Privacy Policy</a>
     </div>
     <p class="mt-3 mb-0">&copy; 2025. All rights reserved.</p>
@@ -165,25 +165,138 @@
   </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>  
 </body>
-<!-- Cookie Consent Banner -->
-<div id="cookieConsent" class="position-fixed bottom-0 start-0 end-0 bg-dark text-white p-3 d-none" style="z-index: 1050;">
-  <div class="container d-flex justify-content-between align-items-center">
-    <p class="mb-0">We use cookies to ensure you get the best experience on our website. <a href="#" class="text-info">Learn more</a></p>
-    <button id="acceptCookies" class="btn btn-primary">Accept</button>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const termsLink = document.querySelector('a[href="#"][class="text-white"]');
+    const privacyLink = document.querySelector('a[href="#"]:nth-of-type(2)');
+
+    termsLink.addEventListener('click', (event) => {
+      event.preventDefault();
+      alert("Terms of Service: By using this website, you agree to abide by all applicable laws and regulations. Unauthorized use of the content is prohibited.");
+    });
+
+    privacyLink.addEventListener('click', (event) => {
+      event.preventDefault();
+      alert("Privacy Policy: We value your privacy. Your personal data will not be shared without your consent. For more details, contact us.");
+    });
+  });
+</script>
+<div id="termsModal" class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Terms of Service</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>By using this website, you agree to abide by all applicable laws and regulations. Unauthorized use of the content is prohibited.</p>
+        <p>We reserve the right to modify these terms at any time. Continued use of the website constitutes acceptance of the updated terms.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
 
-<script>
-  // Check if cookies are already accepted
-  if (!localStorage.getItem('cookiesAccepted')) {
-    document.getElementById('cookieConsent').classList.remove('d-none');
-  }
+<script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', () => {
+    const termsLink = document.querySelector('a[href="#"][class="text-white"]');
+    const termsModal = new bootstrap.Modal(document.getElementById('termsModal'));
 
-  // Handle cookie acceptance
-  document.getElementById('acceptCookies').addEventListener('click', () => {
-    localStorage.setItem('cookiesAccepted', 'true');
-    document.getElementById('cookieConsent').classList.add('d-none');
+    termsLink.addEventListener('click', (event) => {
+      event.preventDefault();
+      termsModal.show();
+    });
   });
 </script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const sidebar = document.querySelector('.bg-dark');
+    const toggleSidebarButton = document.createElement('button');
+    toggleSidebarButton.textContent = '☰';
+    toggleSidebarButton.classList.add('btn', 'btn-primary', 'position-fixed', 'top-0', 'start-0', 'm-3');
+    toggleSidebarButton.style.zIndex = '1050';
 
+    document.body.appendChild(toggleSidebarButton);
+
+    toggleSidebarButton.addEventListener('click', () => {
+      sidebar.classList.toggle('d-none');
+    });
+
+    // Make sidebar responsive
+    const mediaQuery = window.matchMedia('(max-width: 768px)');
+    const handleMediaQueryChange = (e) => {
+      if (e.matches) {
+        sidebar.classList.add('d-none');
+      } else {
+        sidebar.classList.remove('d-none');
+      }
+    };
+
+    mediaQuery.addEventListener('change', handleMediaQueryChange);
+    handleMediaQueryChange(mediaQuery);
+  });
+</script>
+<!-- Chatbot -->
+<div id="chatbot" class="position-fixed bottom-0 end-0 m-3 bg-light border rounded shadow" style="width: 300px; display: none; z-index: 1050;">
+  <div class="d-flex justify-content-between align-items-center bg-primary text-white p-2">
+    <span>Chatbot</span>
+    <button id="minimizeChatbot" class="btn btn-sm btn-light">−</button>
+  </div>
+  <div id="chatContent" class="p-2" style="height: 300px; overflow-y: auto;">
+    <div class="text-muted text-center">Welcome! How can I assist you?</div>
+  </div>
+  <div class="input-group p-2">
+    <input id="chatInput" type="text" class="form-control" placeholder="Type a message...">
+    <button id="sendMessage" class="btn btn-primary">Send</button>
+  </div>
+</div>
+<button id="toggleChatbot" class="btn btn-primary position-fixed bottom-0 end-0 m-3" style="z-index: 1050;">💬</button>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const chatbot = document.getElementById('chatbot');
+    const toggleChatbot = document.getElementById('toggleChatbot');
+    const minimizeChatbot = document.getElementById('minimizeChatbot');
+    const chatContent = document.getElementById('chatContent');
+    const chatInput = document.getElementById('chatInput');
+    const sendMessage = document.getElementById('sendMessage');
+
+    toggleChatbot.addEventListener('click', () => {
+      chatbot.style.display = chatbot.style.display === 'none' ? 'block' : 'none';
+    });
+
+    minimizeChatbot.addEventListener('click', () => {
+      chatbot.style.display = 'none';
+    });
+
+    sendMessage.addEventListener('click', () => {
+      const userMessage = chatInput.value.trim();
+      if (userMessage) {
+        const userBubble = document.createElement('div');
+        userBubble.className = 'text-end mb-2';
+        userBubble.innerHTML = `<span class="badge bg-primary text-white">${userMessage}</span>`;
+        chatContent.appendChild(userBubble);
+        chatInput.value = '';
+
+        // Simulate bot response
+        setTimeout(() => {
+          const botBubble = document.createElement('div');
+          botBubble.className = 'text-start mb-2';
+          botBubble.innerHTML = `<span class="badge bg-secondary text-white">I'm here to help!</span>`;
+          chatContent.appendChild(botBubble);
+          chatContent.scrollTop = chatContent.scrollHeight;
+        }, 500);
+      }
+    });
+
+    chatInput.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') {
+        sendMessage.click();
+      }
+    });
+  });
+</script>
 </html>
